# credit-card-payment-default-prediction

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_science.yml
notebooks/: 01_data_quality_check.ipynb
src/credit_card_payment_default_prediction/: __init__.py  __main__.py
src/credit_card_payment_default_prediction/pipelines/data_processing/: nodes.py  pipeline.py
